syntax = "proto3";

package io.appium.multiplatform.service;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "io/appium/multiplatform/model/uiautomator.proto";

message FindElementRequest {
  oneof selector {
    option (buf.validate.oneof).required = true;
    io.appium.multiplatform.model.UiSelector ui = 2;
    io.appium.multiplatform.model.BySelector by = 3;
  }
  optional string session_id = 11 [(buf.validate.field).string.uuid = true];
  bool is_multiple = 12;
  bool is_strict = 13;
}
message Element {
  oneof element {
    io.appium.multiplatform.model.UiObject uiobject = 2;
    io.appium.multiplatform.model.UiObject2 uiobject2 = 3;
  }
}
message FindElementResponse {
  Element element = 1;
}

message FindElementsResponse {
  repeated Element elements = 1;
}

service WebdriverService {
  rpc FindElement(FindElementRequest) returns (FindElementResponse) {
    option (google.api.http) = {post: "/session/{name=sessionId}/element"};
  }
  rpc FindElements(FindElementRequest) returns (FindElementsResponse) {
    option (google.api.http) = {post: "/session/{name=sessionId}/elements"};
  }
}
